@@ -1,7 +1,9 @@
 language: python
 python:
-  - '2.6'
   - '2.7'
+  - '3.5'
+  - 'pypy'
+  - 'pypy3'
 install:
   - 'pip install -r requirements/basic.txt'
   - 'pip install -r requirements/devel.txt'
