@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, pypy, py32, py34
+envlist = py27, py35, pypy, pypy3
 indexserver=
 default = http://pypi.python.org/simple
 testrun = http://pypi.testrun.org
@@ -7,12 +7,11 @@ testrun = http://pypi.testrun.org
 [testenv]
 deps=coverage
      django
-     django-coverage
 commands=./run_tests.py []
 
 [testenv:py25]
 setenv =
     PIP_INSECURE = 1
 deps=coverage
-     django==1.4.5
+     django==1.7.10
      django-coverage
