@@ -3,6 +3,10 @@ Changelog
 Version 1.8.1
 =============
 
+Changed supported versions of Python (2.7/3.5/PyPy) and Django (1.7.10+).
+
+Converted the test suite from doctest to unittest.
+
 Bugs fixed:
 
 - #25: max_length ignored in django 1.7 migrations
